--- a/Projects/Portfolio/style.css
+++ b/Projects/Portfolio/style.css
@@ -7,7 +7,15 @@ body, html {
     background-color: #111;
 }
 
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1; /* Ensure it's in the background */
+}
+
 .full-screen-section {
+    position: relative; /* Relative positioning for the container */
     height: 100vh;
     display: flex;
     flex-direction: column;
