--- a/Projects/Site/style.css
+++ b/Projects/Site/style.css
@@ -10,12 +10,33 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 3em;
+    font-size: 1em;
     transition: opacity 1s ease-in-out;
     opacity: 0;
 }
 
-#section1 { background-color: #ff6666; }
+.content {
+    text-align: center;
+    color: white;
+}
+
+#section1 {
+    background-image: url('path_to_your_image.jpg'); /* Replace with your image path */
+    background-size: cover;
+    background-position: center;
+}
+
 #section2 { background-color: #8cff66; }
-#section3 { background-color: #66b3ff; }
-#section4 { background-color: #ffdb4d; }
+
+/* Additional styles for text and buttons */
+h1, h2, p {
+    margin: 0.5em;
+}
+
+button {
+    padding: 10px 20px;
+    font-size: 1em;
+    cursor: pointer;
+}
+
+/* Rest of your CSS */
