--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -1,40 +1,20 @@
 body, html {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Noto Sans JP', sans-serif;
+    height: 100%;
 }
 
-.header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 0;
-    text-align: center;
+.full-screen {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.navbar ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-.navbar li {
-    display: inline;
-    margin: 0 10px;
-}
-
-.navbar a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.title {
-    margin: 0;
-}
-
-.about, .portfolio, .contact {
-    padding: 20px;
-    opacity: 0;
-    transform: translateY(20px);
-    transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+.vertical-title {
+    writing-mode: vertical-rl;
+    font-size: 3em;
 }
 
 .portfolio-grid {
@@ -50,11 +30,4 @@ body, html {
 .portfolio-item img {
     width: 100%;
     height: auto;
-}
-
-.footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
 }
