--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -3,6 +3,8 @@ body, html {
     padding: 0;
     font-family: 'Noto Sans JP', sans-serif;
     height: 100%;
+    background-color: #000;
+    color: #fff;
 }
 
 .full-screen {
@@ -12,9 +14,19 @@ body, html {
     align-items: center;
 }
 
+.title-section {
+    background: url('path/to/background-image.jpg') no-repeat center center;
+    background-size: cover;
+}
+
 .vertical-title {
     writing-mode: vertical-rl;
     font-size: 3em;
+    font-family: 'Shadows Into Light', cursive;
+}
+
+.portfolio-section {
+    font-family: 'Noto Sans JP', sans-serif;
 }
 
 .portfolio-grid {
